--- a/docker/producer/Dockerfile
+++ b/docker/producer/Dockerfile
@@ -3,6 +3,6 @@ WORKDIR /home/user/promprog/docker/producer
 
 COPY requirements.txt /home/user/promprog/docker/producer
 COPY . .
-RUN pip install --no-cache-dir -r /home/user/promprog/docker/producer/requirements.txt
+RUN pip install -r /home/user/promprog/docker/producer/requirements.txt
 
 CMD [ "python", "./producer.py" ]
